--- a/languages/cleverreachextension-ru_RU.po
+++ b/languages/cleverreachextension-ru_RU.po
@@ -2,105 +2,101 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CleverReach Extension 0.1.0\n"
 "Report-Msgid-Bugs-To: https://code64.de\n"
-"POT-Creation-Date: 2015-05-14 23:35+0100\n"
-"PO-Revision-Date: 2015-05-14 23:40+0100\n"
+"POT-Creation-Date: 2015-08-11 13:25+0100\n"
+"PO-Revision-Date: 2015-08-11 13:27+0100\n"
 "Last-Translator: Sven Hofmann <info@hofmannsven.com>\n"
 "Language-Team: Sven Hofmann <info@hofmannsven.com>\n"
-"Language: de_DE\n"
+"Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.7.5\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr__;esc_attr_e;esc_attr_x;"
 "esc_html__;esc_html_e;esc_html_x;_n_noop;_nx_noop\n"
-"X-Poedit-Basepath: ../\n"
+"X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: admin/class-cre-admin.php:74 admin/class-cre-admin.php:162
 msgid "Settings"
-msgstr "Einstellungen"
+msgstr "Настройки"
 
 #: admin/class-cre-admin.php:169
 msgid "API Key"
-msgstr "API Key"
+msgstr "API-ключ"
 
 #: admin/class-cre-admin.php:177
 msgid "List"
-msgstr "Liste"
+msgstr "Список"
 
 #: admin/class-cre-admin.php:185
 msgid "Form"
-msgstr "Formular"
+msgstr "Форма"
 
 #: admin/class-cre-admin.php:193
 msgid "Source"
-msgstr "Quelle"
+msgstr "Источник"
 
 #: admin/class-cre-admin.php:246
 msgid "CleverReach API Keys can be created within Account » Extras » API"
-msgstr ""
-"CleverReach API Keys können unter Account » Extras » API erstellt werden."
+msgstr "Чтобы создать CleverReach API-ключ, перейдите в Account » Extras » API"
 
 #: admin/class-cre-admin.php:318
 msgid "(optional)"
-msgstr "(optional)"
+msgstr "(необязательное поле)"
 
 #: admin/class-cre-admin.php:329
 msgid "Use the fields below to connect WordPress and CleverReach."
-msgstr ""
-"Nutze die Eingabefelder, um die Verbindung zwischen WordPress und "
-"CleverReach herzustellen."
+msgstr "Используйте поля ниже, чтобы связать WordPress и CleverReach."
 
 #: admin/class-cre-admin.php:347 includes/api/class-cleverreach.php:110
 msgid "Your API key is invalid."
-msgstr "Dein API Key ist ungültig."
+msgstr "Ваш API-ключ недействителен."
 
 #: admin/class-cre-admin.php:351
 msgid "Please select a list."
-msgstr "Bitte wähle eine Liste aus."
+msgstr "Пожалуйста, выберите список."
 
 #: admin/class-cre-admin.php:355
 msgid "Please select a form."
-msgstr "Bitte wähle ein Formular aus."
+msgstr "Пожалуйста, выберите форму."
 
 #: admin/class-cre-admin.php:381
 msgid "Still need a CleverReach account?"
-msgstr "Du hast noch keinen CleverReach-Account?"
+msgstr "У Вас нет аккаунта CleverReach?"
 
 #: admin/class-cre-admin.php:383
 msgid "Sign up for free!"
-msgstr "Melden Sie sich jetzt kostenlos an!"
+msgstr "Зарегистрируйтесь бесплатно!"
 
 #: admin/class-cre-admin.php:406
 msgid "Your Shortcode"
-msgstr "Dein Shortcode"
+msgstr "Ваш код для вставки"
 
 #: admin/class-cre-admin.php:409
 msgid "You can use the shortcode below everywhere on your page."
 msgstr ""
-"Du kannst den unten stehenden Shortcode überall auf der der Seite einfügen."
+"Вы можете использовать код, который приведен ниже, для вставки в любой "
+"раздел веб-сайта."
 
 #: admin/class-cre-admin.php:410
 msgid "Check the wiki on how to customize your form."
-msgstr ""
-"Schau in das Wiki, um zu erfahren, wie du dein eigenes Formular einbinden "
-"kannst."
+msgstr "Подробнее о том, как настроить вашу форму, читайте в wiki."
 
 #: cleverreach-extension.php:43
 #, php-format
 msgid "CleverReach Extension plugin requires PHP %s or greater."
-msgstr "CleverReach Extension Plugin benötigt PHP %s oder neuer."
+msgstr "Для плагина CleverReach Extension требуется PHP версии %s и выше."
 
 #: cleverreach-extension.php:44 cleverreach-extension.php:53
 msgid "Plugin Activation Error"
-msgstr "Fehler beim Aktivieren des Plugins"
+msgstr "Ошибка при активации плагина"
 
 #: cleverreach-extension.php:52
 #, php-format
 msgid "CleverReach Extension plugin requires PHP %s extension."
-msgstr "CleverReach Extension Plugin benötigt die PHP %s Extension."
+msgstr "Для плагина CleverReach Extension требуется расширение PHP %s."
 
 #: cleverreach-extension.php:81
 msgid "CleverReach Extension"
@@ -108,53 +104,37 @@ msgstr "CleverReach Extension"
 
 #: includes/class-cre-models.php:62
 msgid "Please apply your own form within your plugin or theme."
-msgstr "Bitte hinterlege dein eigenes Formular in deinem Plugin oder Theme."
+msgstr ""
+"Пожалуйста, используйте Вашу собственную форму для вашего плагина или темы."
 
 #: public/class-cre-public.php:74
 msgid "Saving..."
-msgstr "Speichern..."
+msgstr "Сохранение…"
 
 #: public/class-cre-public.php:75
 msgid "Please check your email to confirm your subscription."
 msgstr ""
-"Bitte bestätigen Sie ihre Anmeldung noch über den Link in der Bestätigungs-"
-"Email."
+"Для подтверждения подписки на рассылку проверьте, пожалуйста, Вашу "
+"электронную почту."
 
 #: public/class-cre-public.php:76
 msgid ""
 "Sorry, there was a problem saving your data. Please try later or contact the "
 "administrator."
 msgstr ""
-"Sorry, es gab ein Problem beim Speichern deiner Daten. Bitte probiere es "
-"später noch einmal oder kontaktiere einen Administrator."
+"При сохранении данных произошла ошибка. Пожалуйста, повторите попытку позже "
+"или обратитесь к администратору сайта."
 
 #: public/class-cre-public.php:157
 msgid "It seems like you're already subscribed to our list."
-msgstr "Du bist scheinbar bereits in unseren Verteiler eingetragen."
+msgstr "Вы уже подписались на нашу рассылку."
 
 #: public/class-cre-public.php:159
 msgid "Sorry, there seems to be a problem with your data."
-msgstr ""
-"Sorry, es gibt scheinbar ein Problem bei der Verarbeitung deiner Daten."
+msgstr "При обработке Ваших данных произошла ошибка."
 
 #: public/class-cre-public.php:167
 msgid "Sorry, there seems to be a problem with your email address."
-msgstr "Sorry, es gibt scheinbar ein Problem mit deiner E-Mail-Adresse."
-
-#~ msgid "CleverReach Settings"
-#~ msgstr "CleverReach Einstellungen"
-
-#~ msgid "Please enter your CleverReach API Key."
-#~ msgstr "Bitte hinterlege deinen CleverReach API Key."
-
-#~ msgid "Submit"
-#~ msgstr "Absenden"
-
-#~ msgid "Interface"
-#~ msgstr "Schnittstelle"
-
-#~ msgid "CleverReach API Settings"
-#~ msgstr "CleverReach API Einstellungen"
-
-#~ msgid "CleverReach"
-#~ msgstr "CleverReach"
+msgstr ""
+"Произошла ошибка. Пожалуйста, введите действительный адрес электронной "
+"почты. "
